Initial workflow added

--- a/.github/worklflows/main.yml
+++ b/.github/worklflows/main.yml
@@ -1,8 +1,9 @@
-name: Build and Deploy
+name: Build and Deploy\
+
 on:
   push:
     branches:
-      - main
+      - "main"
     paths:
       - 'src/**'
       - '.github/workflows/**'
