--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.15",
+    "animate.css": "^4.1.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.1",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-animations": "^1.0.0",
     "@types/react-router-dom": "^5.1.8",
     "gh-pages": "^3.2.3"
   }
