--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.15",
     "animate.css": "^4.1.1",
+    "framer-motion": "^5.5.5",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.1",
@@ -26,9 +28,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "CI=false && react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
