--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "main"
     paths:
-      - 'src/**'
+      - 'frontend/**'
       - '.github/workflows/**'
       - '/**'
 jobs:
