--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.1",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
@@ -53,7 +54,6 @@
   "devDependencies": {
     "@types/react-animations": "^1.0.0",
     "@types/react-router-dom": "^5.1.8",
-    "gh-pages": "^3.2.3",
-    "react-scripts": "^5.0.0"
+    "gh-pages": "^3.2.3"
   }
 }
